added cursor pointer

--- a/src/components/container.css
+++ b/src/components/container.css
@@ -5,6 +5,7 @@
     justify-content: center;
     position: relative;
     align-items: center;
+    cursor: pointer;
     border-radius: 200px;
     gap: 80px;
 }
